// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders correctly 1`] = `
<div
  className="slider-picker "
  style={{}}
>
  <div
    style={
      {
        "height": "12px",
        "position": "relative",
      }
    }
  >
    <div
      style={
        {
          "borderRadius": undefined,
          "boxShadow": undefined,
          "inset": "0px",
          "position": "absolute",
        }
      }
    >
      <div
        className="hue-horizontal"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "borderRadius": undefined,
            "height": "100%",
            "padding": "0 2px",
            "position": "relative",
          }
        }
      >
        <style>
          
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
        </style>
        <div
          style={
            {
              "left": "69.44444444444443%",
              "position": "absolute",
              "top": undefined,
            }
          }
        >
          <div
            style={
              {
                "backgroundColor": "rgb(248, 248, 248)",
                "borderRadius": "6px",
                "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                "height": "14px",
                "transform": "translate(-7px, -1px)",
                "width": "14px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      style={
        {
          "marginTop": "20px",
        }
      }
    >
      <div
        style={
          {
            "boxSizing": "border-box",
            "float": "left",
            "paddingRight": "1px",
            "width": "20%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            {
              "background": "hsl(249.99999999999994, 50%, 80%)",
              "borderRadius": "2px 0 0 2px",
              "cursor": "pointer",
              "height": "12px",
              "transform": undefined,
            }
          }
        />
      </div>
      <div
        style={
          {
            "boxSizing": "border-box",
            "float": "left",
            "paddingRight": "1px",
            "width": "20%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            {
              "background": "hsl(249.99999999999994, 50%, 65%)",
              "borderRadius": undefined,
              "cursor": "pointer",
              "height": "12px",
              "transform": undefined,
            }
          }
        />
      </div>
      <div
        style={
          {
            "boxSizing": "border-box",
            "float": "left",
            "paddingRight": "1px",
            "width": "20%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            {
              "background": "hsl(249.99999999999994, 50%, 50%)",
              "borderRadius": undefined,
              "cursor": "pointer",
              "height": "12px",
              "transform": undefined,
            }
          }
        />
      </div>
      <div
        style={
          {
            "boxSizing": "border-box",
            "float": "left",
            "paddingRight": "1px",
            "width": "20%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            {
              "background": "hsl(249.99999999999994, 50%, 35%)",
              "borderRadius": undefined,
              "cursor": "pointer",
              "height": "12px",
              "transform": undefined,
            }
          }
        />
      </div>
      <div
        style={
          {
            "boxSizing": "border-box",
            "float": "left",
            "paddingRight": "1px",
            "width": "20%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            {
              "background": "hsl(249.99999999999994, 50%, 20%)",
              "borderRadius": "3.6px/2px",
              "cursor": "pointer",
              "height": "12px",
              "transform": "scaleY(1.8)",
            }
          }
        />
      </div>
      <div
        style={
          {
            "clear": "both",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`SliderPointer renders correctly 1`] = `
<div
  style={
    {
      "backgroundColor": "rgb(248, 248, 248)",
      "borderRadius": "6px",
      "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "height": "14px",
      "transform": "translate(-7px, -1px)",
      "width": "14px",
    }
  }
/>
`;

exports[`SliderSwatch renders correctly 1`] = `
<div
  onClick={[Function]}
  style={
    {
      "background": "hsl(0, 50%, NaN%)",
      "borderRadius": undefined,
      "cursor": "pointer",
      "height": "12px",
      "transform": undefined,
    }
  }
/>
`;

exports[`SliderSwatches renders correctly 1`] = `
<div
  style={
    {
      "marginTop": "20px",
    }
  }
>
  <div
    style={
      {
        "boxSizing": "border-box",
        "float": "left",
        "paddingRight": "1px",
        "width": "20%",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        {
          "background": "hsl(0, 50%, 80%)",
          "borderRadius": "2px 0 0 2px",
          "cursor": "pointer",
          "height": "12px",
          "transform": undefined,
        }
      }
    />
  </div>
  <div
    style={
      {
        "boxSizing": "border-box",
        "float": "left",
        "paddingRight": "1px",
        "width": "20%",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        {
          "background": "hsl(0, 50%, 65%)",
          "borderRadius": undefined,
          "cursor": "pointer",
          "height": "12px",
          "transform": undefined,
        }
      }
    />
  </div>
  <div
    style={
      {
        "boxSizing": "border-box",
        "float": "left",
        "paddingRight": "1px",
        "width": "20%",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        {
          "background": "hsl(0, 50%, 50%)",
          "borderRadius": undefined,
          "cursor": "pointer",
          "height": "12px",
          "transform": undefined,
        }
      }
    />
  </div>
  <div
    style={
      {
        "boxSizing": "border-box",
        "float": "left",
        "paddingRight": "1px",
        "width": "20%",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        {
          "background": "hsl(0, 50%, 35%)",
          "borderRadius": undefined,
          "cursor": "pointer",
          "height": "12px",
          "transform": undefined,
        }
      }
    />
  </div>
  <div
    style={
      {
        "boxSizing": "border-box",
        "float": "left",
        "paddingRight": "1px",
        "width": "20%",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        {
          "background": "hsl(0, 50%, 20%)",
          "borderRadius": "0 2px 2px 0",
          "cursor": "pointer",
          "height": "12px",
          "transform": undefined,
        }
      }
    />
  </div>
  <div
    style={
      {
        "clear": "both",
      }
    }
  />
</div>
`;
